--- a/src/css/sdpi.css
+++ b/src/css/sdpi.css
@@ -1597,3 +1597,7 @@ button.settings:hover{
 .next-to-settings {
   min-width: 188px !important;
 }
+
+input.next-to-settings:read-only {
+  color: #595959;
+}
